[MOD] Margin ans spacing fix

--- a/front/src/app/pages/feed/feed.component.scss
+++ b/front/src/app/pages/feed/feed.component.scss
@@ -1,10 +1,10 @@
 
 .feed {
-    padding : 1em 2em 0 2em;
+    padding : 0 2em 0 2em;
 }
 
 .feedBtnRow {
-    padding : 1em 0 1.5em 0;
+    padding : 0 0 1.5em 0;
     display: flex;
     //justify-content: space-between;
     align-items: center;
