--- a/front/src/app/pages/topics/topics.component.scss
+++ b/front/src/app/pages/topics/topics.component.scss
@@ -2,12 +2,13 @@
     display:grid;
     row-gap: 1em;
     column-gap: 0.5em;
-    padding: 2em;
+    padding: 1em 2em;
     grid-template-columns: 1fr 1fr;
 }
 
 @media screen and (max-width: 768px) {
     .topicList {
+        padding: 0 1em;
         grid-template-columns: 1fr !important;
     }
 }
