--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -23,7 +23,7 @@ img.bigLogo {
   margin-bottom: 4em;
 }
 
-.form-flex-container {
+.login .form-flex-container {
   max-width: 20em;
   display: flex;
   align-items: center;
